# image-processing

./: .gitignore  ImageSegmentationUI.cpp  ImageSegmentationUI.h  ImageSegmentationUI.ilk  ImageSegmentationUI.qrc  ImageSegmentationUI.ui  ImageSegmentationUI.vcxproj  ImageSegmentationUI.vcxproj.filters  ImageSegmentor.cpp  ImageSegmentor.h  README.md  main.cpp
Debug/: ImageSegmentationUI.ilk
GeneratedFiles/: qrc_ImageSegmentationUI.cpp  ui_ImageSegmentationUI.h
GeneratedFiles/Debug/: moc_ImageSegmentationUI.cpp
binary_segmentation/: CMakeLists.txt  ImageSegmentationUI.cpp  ImageSegmentationUI.h  ImageSegmentationUI.qrc  ImageSegmentationUI.ui  ImageSegmentor.cpp  ImageSegmentor.h  main.cpp
x64/Debug/ImageSeg.B12702AD.tlog/: CL.12204.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  ImageSegmentationUI.lastbuildstate  ImageSegmentationUI.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
